# pasda

./: CMakeLists.txt
gui/: lolwtf.cpp
